@@ -18,6 +18,9 @@
 	doc/Makefile.am: Add modules to read and create IQ for privacy list
 	management.
 
+	* src/core/exmpp_stream.erl: Add the function opening_reply/3 which is
+	the same as opening_reply/2 but takes a language in 3rd argument.
+
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
